<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment1">

    <!-- TODO: Update blank fragment layout -->
    <CheckBox
        android:id="@+id/checkBoxFIOT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="182dp"
        android:text="@string/checkbox1"
        android:textSize="15sp"
        android:textAlignment="center"
        />

    <CheckBox
        android:id="@+id/checkBoxTEF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:text="@string/checkbox2"
        android:textSize="15sp"
        android:textAlignment="center"
         />

    <CheckBox
        android:id="@+id/checkBoxIHF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="122dp"
        android:text="@string/checkbox3"
        android:textSize="15sp"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="282dp"
        android:text="@string/buttom1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/textview1"
        android:textSize="15sp"
        android:textAlignment="center"
         />

</FrameLayout>